(bg): Letters not highlightinh properly

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <span>y</span>
   </h1>
     <input id="wordResponse" type="text" name="response" autocomplete="off" autocorrect="off" autocapitalize="off">
+    <p id="solutions"></p>
     <script type="text/javascript" src="assets/js/main.js"> </script>
 </body>
 
