--- a/index.html
+++ b/index.html
@@ -3,28 +3,27 @@
 
 <head>
     <title>Letter Play</title>
-    <style type="text/css">
-    .text-highlight {
-        color: red;
-    }
-    </style>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 
 <body>
+    <main>
     <h1 id="wordChallenge"> 
-    <span>l</span>
-    <span>e</span>
+    <span>L</span>
+    <span>E</span>
     <span>t</span>
     <span>t</span>
     <span>e</span>
-    <span>r</span>
+    <span>R</span>
     <span>p</span>
     <span>l</span>
-    <span>a</span>
+    <span>A</span>
     <span>y</span>
   </h1>
     <input id="wordResponse" type="text" name="response" autocomplete="off" autocorrect="off" autocapitalize="off">
     <p id="solutions"></p>
+    </main>
     <script type="text/javascript" src="assets/js/main.js"> </script>
 </body>
 
