(ft): Adds timer to the game. (bg): Timer is hardcoded

--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
     <span>y</span>
   </h1>
     <input id="wordResponse" type="text" name="response" autocomplete="off" autocorrect="off" autocapitalize="off">
-    <p id="solutions"></p>
     </main>
+    <div class="stats">
+    <h2>SCORE : <span id="score"></span></h2>
+    <h2>TARGET : <span id="target"></span></h2>
+    <h2 id="clockdiv" >TIMER : <span class="seconds"></span></h2>
+
+    </div>
     <script type="text/javascript" src="assets/js/main.js"> </script>
+    <script type="text/javascript" src="assets/js/timer.js"> </script>
 </body>
 
 </html>
