--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
     <span>R</span>
     <span>p</span>
     <span>l</span>
-    <span>A</span>
+    <span>a</span>
     <span>y</span>
+
   </h1>
     <input id="wordResponse" type="text" name="response" autocomplete="off" autocorrect="off" autocapitalize="off">
+    <div id="solutions"></div>
     </main>
     <div class="stats">
     <h2>SCORE : <span id="score"></span></h2>
     <h2>TARGET : <span id="target"></span></h2>
-    <h2 id="clockdiv" >TIMER : <span class="seconds"></span></h2>
-
-    </div>
+    <h2 id="timer">TIME LEFT: <span class="seconds"></span>sec</h2>
+ </div>
+  <h2 id="deadline-met">Oops! Looks like you ran out of time!</h2>
     <script type="text/javascript" src="assets/js/main.js"> </script>
     <script type="text/javascript" src="assets/js/timer.js"> </script>
 </body>
