(fx):Adds clearer UI elements on click for the word

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <span>y</span>
 
   </h1>
-    <input id="wordResponse" type="text" name="response" autocomplete="off" autocorrect="off" autocapitalize="off">
+    <input id="wordResponse" type="text" name="response" autocomplete="off" autocorrect="off" autocapitalize="off" placeholder="Type here...">
     <div id="solutions"></div>
     </main>
     <div class="stats">
