(fx): Code clean up and UI fixes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <span>y</span>
 
   </h1>
+  <h1 id="newStuff">Exciting</h1> 
     <input id="wordResponse" type="text" name="response" autocomplete="off" autocorrect="off" autocapitalize="off" placeholder="Type here...">
     <div id="solutions"></div>
     </main>
@@ -31,8 +32,11 @@
     <h2 id="timer">TIME LEFT: <span class="seconds"></span>sec</h2>
  </div>
   <h2 id="deadline-met">Oops! Looks like you ran out of time!</h2>
+<!--     <script type="text/javascript" src="assets/plugins/jquery-3.2.0.min.js"></script>
+ -->    <script type="text/javascript" src="assets/js/dictionary.js"> </script>
     <script type="text/javascript" src="assets/js/main.js"> </script>
     <script type="text/javascript" src="assets/js/timer.js"> </script>
+
 </body>
 
 </html>
