(ft): Resolves each letter into spans and use more than one word for the game

--- a/index.html
+++ b/index.html
@@ -9,20 +9,7 @@
 
 <body>
     <main>
-    <h1 id="wordChallenge"> 
-    <span>L</span>
-    <span>E</span>
-    <span>t</span>
-    <span>t</span>
-    <span>e</span>
-    <span>R</span>
-    <span>p</span>
-    <span>l</span>
-    <span>a</span>
-    <span>y</span>
-
-  </h1>
-  <h1 id="newStuff">Exciting</h1> 
+    <h1 id="wordChallenge"></h1>
     <input id="wordResponse" type="text" name="response" autocomplete="off" autocorrect="off" autocapitalize="off" placeholder="Type here...">
     <div id="solutions"></div>
     </main>
@@ -32,8 +19,8 @@
     <h2 id="timer">TIME LEFT: <span class="seconds"></span>sec</h2>
  </div>
   <h2 id="deadline-met">Oops! Looks like you ran out of time!</h2>
-<!--     <script type="text/javascript" src="assets/plugins/jquery-3.2.0.min.js"></script>
- -->    <script type="text/javascript" src="assets/js/dictionary.js"> </script>
+    <script type="text/javascript" src="assets/js/utils.js"> </script>
+    <script type="text/javascript" src="assets/js/dictionary.js"> </script>
     <script type="text/javascript" src="assets/js/main.js"> </script>
     <script type="text/javascript" src="assets/js/timer.js"> </script>
 
