(fx) Adds monospace font as main font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Letter Play</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton|Audiowide|Space+Mono" rel="stylesheet">
+
 </head>
 
 <body>
